--- a/progress/2025-01-30.md
+++ b/progress/2025-01-30.md
@@ -20,8 +20,10 @@ hackquest参加mini telos hackthon（Gamefi-2048）
 Defi：
 跟着DL继续学，手写UniswapV2
 安全方向：
-补充做一下DameVulnerableDefi项目
 研究codehawks过往的比赛然后研究一个写一个project报告
 试试钱包开发和链的开发
+
+先把基础刷完每个项目加进来，然后去研究ZK，每天晚上研究1小时audit就行
+rust去刷基础rustlings，rust by practice
 
 
