--- a/projects/CodeHawks/FF33.md
+++ b/projects/CodeHawks/FF33.md
@@ -29,13 +29,13 @@ matchRewards(address from, address to)匹配奖励
 Vulnerabilities：
 H：
 1. 好像没办法取消likes
-2. blockProfile(address blockAddress)管理员删档，好像还是能再mintProfile的
+2. blockProfile(address blockAddress)管理员删档，好像还是能再mintProfile的（感觉是M-level的）
 3. userBalances好像没地方改，从来没有增加过
 4. rewards用的是双方的余额相加，而不是匹配的时候转的钱相加
 5. 
 
 M：
-1. 没办法取消likes和取出来钱（不太确定）
+1. Multisig中执行tx没有验证余额，直接就转了很容易浪费gas
 2. 
 
 L：
