--- a/progress/2025-01-30.md
+++ b/progress/2025-01-30.md
@@ -15,7 +15,7 @@ codehawks打了一场firstflight
 hackquest参加mini telos hackthon（Gamefi-2048）
 
 ## 下一步安排：
-理论：ZK，跨链，layer2，layer3，钱包开发，链开发，补充基础（账户抽象、签名、可升级合约），gas优化
+理论：ZK，跨链，layer2，layer3，钱包开发，链开发，补充基础（账户抽象、签名、可升级、锁、多签、存储优化），gas优化
 开发方面：再去研究下ethersjs，继续学习rust然后尽快上手solnana框架和bot啥的
 Defi：
 跟着DL继续学，手写UniswapV2
